--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,11 @@
             <version>1.5.1.RELEASE</version>
         </dependency>
 
+		<dependency>
+			<groupId>org.stringframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+
         <dependency>
             <groupId>org.apache.derby</groupId>
             <artifactId>derby</artifactId>
