启动Spring是默认启用profile

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+##
+# Profile Configuration
+# available profiles: batch
+##
+# This file is included when 'batch Spring profile is active
+##
+spring.profiles.active=batch
 server.port=8081
