使用默认端口号 禁用management.secirity.enable使actuator可用

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,4 @@
 # This file is included when 'batch Spring profile is active
 ##
 spring.profiles.active=batch
-server.port=8081
+management.security.enabled=false
